--- a/index.html
+++ b/index.html
@@ -51,11 +51,6 @@
 		 <div class="container">
 			 <div class="row">
 				 <div class="col-md-12">
-					  <div id="typed-strings">
-    					<p class = "lead">Small Businesses are <strong>changing.</strong></p>
-    					<p class = "lead">Is<em> yours</em>?</p>
-					</div>
-					<span id="typed"></span>
 					  <div class="carousel-iphone">
 					  	<div id="carousel-example-generic" class="carousel slide">
 					    
@@ -89,15 +84,18 @@
 		</div>
 	 </header>
 	  
-	  
-	  <!-- PURCHASE
-	      ================================================== -->
+<!-- PURCHASE ================================================== -->
 	  <section class="purchase">
 		  <div class="container">
 			  <div class="row">
 				  <div class="col-md-offset-2 col-md-8">
-					 <h1>Paragraph 1</h1>
-					 	    <p class="lead">Paragraph 1</p>
+					 <h1>					  
+					 	<div id="typed-strings">
+    					<p class = "lead">Small Businesses are <strong>changing.</strong></p>
+    					<p class = "lead">Is<em> yours</em>?</p>
+						</div>
+						<span id="typed"></span></h1>
+					 	    <p class="lead">Get your business off on the right foot with help from Strattonstudios. Right now through 9/1/2017 we are offering free websites for all new bookeeping clients.</p>
 					 	    <button type="button" class="app-store"></button>	
 				  </div>
 			  </div>
@@ -105,6 +103,40 @@
 	  </section>
 	  
 	  
+<!-- DETAILS ================================================== -->
+ <section class="detail">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+			<ol class="carousel-indicators"></ol>
+				<div id="carousel-example-generic-2" class="carousel slide">
+					  <div class="carousel-inner">
+					    <div class="apply">
+					      	<div class="row">
+					      		<div class="col-sm-12 col-md-offset-1 col-md-6">
+					      			<h1>Accounting</h1>
+					      				<p>Monthly Bookeeping, Tax returns, Financal Statement Prep</p>
+					      				<p><a href="https://script.google.com/macros/s/AKfycbzwvgXucUhy7TqSj3pRZKjPFZ0SS4XUknMY8iPPyLiYol8Dsac/exec">Learn more</a></p>					      	
+					      			</div>
+					      			<div class="col-sm-12 col-md-offset-1 col-md-6"></div>
+					      			<div class="col-sm-12 col-md-offset-1 col-md-6">
+					      			<h1>
+					      			Web design
+					      			</h1>
+					      				<p>Custom web applicabtions tailored to your customers and company's needs.</p>
+					      				<p><a href="https://script.google.com/macros/s/AKfycbzwvgXucUhy7TqSj3pRZKjPFZ0SS4XUknMY8iPPyLiYol8Dsac/exec">Learn more</a></p>					      	
+					      			</div>
+
+					      		</div>
+					    	</div>
+						<ol class="carousel-indicators"></ol>
+					</div>
+				</div>
+			</div>
+		</div>	
+	</div>
+</section>	  
+
 	  <!-- PAYOFF 
 	      ================================================== -->
 	  <section class="payoff">
