--- a/index.html
+++ b/index.html
@@ -116,20 +116,20 @@
 					      		<div class="col-sm-12 col-md-offset-1 col-md-6">
 					      			<h1>Accounting</h1>
 					      				<p>Monthly Bookeeping, Tax returns, Financal Statement Prep</p>
+					      				<div class="col-sm-12 col-md-5">
+					      				<img src ="img/logo-intuit.svg" class="img-responsive" alt="App Screen 1">
+					      				</div>
 					      				<p><a href="https://script.google.com/macros/s/AKfycbzwvgXucUhy7TqSj3pRZKjPFZ0SS4XUknMY8iPPyLiYol8Dsac/exec">Learn more</a></p>					      	
 					      			</div>
+					      			<div class="col-sm-12 col-md-5">
+					      					<div class="app-screenshot">
+					      					<img src="img/intuit-product.jpg" class="img-responsive" alt="App Screen 1">
+					      				</div>
 					      			<div class="col-sm-12 col-md-offset-1 col-md-6"></div>
-					      			<div class="col-sm-12 col-md-offset-1 col-md-6">
-					      			<h1>
-					      			Web design
-					      			</h1>
-					      				<p>Custom web applicabtions tailored to your customers and company's needs.</p>
-					      				<p><a href="https://script.google.com/macros/s/AKfycbzwvgXucUhy7TqSj3pRZKjPFZ0SS4XUknMY8iPPyLiYol8Dsac/exec">Learn more</a></p>					      	
 					      			</div>
-
 					      		</div>
 					    	</div>
-						<ol class="carousel-indicators"></ol>
+						<!--<ol class="carousel-indicators"></ol>-->
 					</div>
 				</div>
 			</div>
@@ -194,10 +194,12 @@
 					  <div class="carousel-inner">
 					    <div class="apply">
 					      	<div class="row">
-					      		<div class="col-sm-12 col-md-offset-1 col-md-6">
-					      			<h1>Paragraph 2</h1>
-					      				<p>upload document tag</p>
-					      				<p><a href="https://script.google.com/macros/s/AKfycbzwvgXucUhy7TqSj3pRZKjPFZ0SS4XUknMY8iPPyLiYol8Dsac/exec">Apply Now!</a></p>					      	
+					      			<div class="col-sm-12 col-md-offset-1 col-md-6">
+					      			<h1>
+					      			Mobile Application 
+					      			</h1>
+					      				<p>Custom web applicabtions tailored to your customers wants and company's needs.</p>
+					      				<p><a href="https://script.google.com/macros/s/AKfycbzwvgXucUhy7TqSj3pRZKjPFZ0SS4XUknMY8iPPyLiYol8Dsac/exec">Learn more</a></p>					      	
 					      			</div>
 					      				<div class="col-sm-12 col-md-5">
 					      					<div class="app-screenshot">
